--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -4,7 +4,8 @@
 <section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
     <div class="login-box card">
         <div class="card-body">
-
+            <!--Aquí estamos igualando con "forma" que pusimos en el .Ts-->
+            <!--Nota: EL ngNativeValidate es el que muestra el mensaje que necesito llenar los campos-->
             <form ngNativeValidate [formGroup]="forma" (ngSubmit)="registrarUsuario()" class="form-horizontal form-material" id="loginform" action="index.html">
                 <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
                 <h3 class="box-title m-t-40 m-b-0">Registrate ahora</h3><small>Crea una cuenta y disfruta</small>
@@ -20,14 +21,22 @@
                 </div>
                 <div class="form-group ">
                     <div class="col-xs-12">
-                        <input formControlName="password" name="password" class="form-control" type="password" required="" placeholder="Contraseña">
+                        <input formControlName="password" name="password" class="form-control" type="password" required placeholder="Contraseña">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-xs-12">
-                        <input formControlName="password2" name="password2" class="form-control" type="password" required="" placeholder="Confirma contraseña">
+                        <input formControlName="password2" name="password2" class="form-control" type="password" required placeholder="Confirma contraseña">
                     </div>
                 </div>
+
+                <div class="form-group" *ngIf="forma.errors?.sonIguales && !forma.pristine ">
+                    <p class="text-danger">
+                        Las contraseñas deben ser iguales !!
+                    </p>
+                </div>
+
+
                 <div class="form-group row">
                     <div class="col-md-12">
                         <div class="checkbox checkbox-primary p-t-0">
@@ -43,7 +52,7 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>tienes una cuenta? <a href="pages-login-2.html" class="text-info m-l-5"><b>Ingresa ahora</b></a></p>
+                        <p>tienes una cuenta? <a routerLink="/login" routerLinkActive="router-link-active" class="text-info m-l-5"><b>Ingresa ahora</b></a></p>
                     </div>
                 </div>
             </form>
