--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -43,3 +43,7 @@
     <!-- ============================================================== -->
 
 </div>
+
+
+<!--Modal Uploads-->
+<app-modal-upload></app-modal-upload>
